--- a/public/404.html
+++ b/public/404.html
@@ -4,11 +4,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <!-- TITULO -->
     <title> Error 404 </title>
+
+    <!-- ICONO -->
+    <link rel="icon" type="image/png" href="./../static/icono.png">
+
+    <!-- CSS -->
+    <link rel="stylesheet" type="text/css" href="./../static/css/style-404.css">
+
+    <!-- ANIMACIONES -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+
 </head>
 <body>
 
-    <h1> Error 404 Página no encontrada </h1>
-    
+    <div class="animate__animated animate__tada erroor">
+        <img class="error" src="./../static/404.png">
+        <h1 class="titulo"> Página no encontrada </h1>
+        <a class="enlace" href="/"> <input type="submit" class="boton" value="Regresar a página principal" ></a>
+    </div>
+
 </body>
 </html>
