--- a/public/icon/demo.html
+++ b/public/icon/demo.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="style.css"></head>
 <body>
     <div class="bgc1 clearfix">
-        <h1 class="mhmm mvm"><span class="fgc1">Font Name:</span> icomoon <small class="fgc1">(Glyphs:&nbsp;25)</small></h1>
+        <h1 class="mhmm mvm"><span class="fgc1">Font Name:</span> icomoon <small class="fgc1">(Glyphs:&nbsp;27)</small></h1>
     </div>
     <div class="clearfix mhl ptl">
         <h1 class="mvm mtn fgc1">Grid Size: 20</h1>
@@ -35,6 +35,34 @@
             <fieldset class="fs0 size1of1 clearfix hidden-false">
                 <input type="text" readonly value="e901" class="unit size1of2" />
                 <input type="text" maxlength="1" readonly value="&#xe901;" class="unitRight size1of2 talign-right" />
+            </fieldset>
+            <div class="fs0 bshadow0 clearfix hidden-true">
+                <span class="unit pvs fgc1">liga: </span>
+                <input type="text" readonly value="" class="liga unitRight" />
+            </div>
+        </div>
+        <div class="glyph fs1">
+            <div class="clearfix bshadow0 pbs">
+                <span class="icon-message"></span>
+                <span class="mls"> icon-message</span>
+            </div>
+            <fieldset class="fs0 size1of1 clearfix hidden-false">
+                <input type="text" readonly value="e90b" class="unit size1of2" />
+                <input type="text" maxlength="1" readonly value="&#xe90b;" class="unitRight size1of2 talign-right" />
+            </fieldset>
+            <div class="fs0 bshadow0 clearfix hidden-true">
+                <span class="unit pvs fgc1">liga: </span>
+                <input type="text" readonly value="" class="liga unitRight" />
+            </div>
+        </div>
+        <div class="glyph fs1">
+            <div class="clearfix bshadow0 pbs">
+                <span class="icon-paper-plane"></span>
+                <span class="mls"> icon-paper-plane</span>
+            </div>
+            <fieldset class="fs0 size1of1 clearfix hidden-false">
+                <input type="text" readonly value="e910" class="unit size1of2" />
+                <input type="text" maxlength="1" readonly value="&#xe910;" class="unitRight size1of2 talign-right" />
             </fieldset>
             <div class="fs0 bshadow0 clearfix hidden-true">
                 <span class="unit pvs fgc1">liga: </span>
@@ -94,6 +122,20 @@
             <fieldset class="fs0 size1of1 clearfix hidden-false">
                 <input type="text" readonly value="e900" class="unit size1of2" />
                 <input type="text" maxlength="1" readonly value="&#xe900;" class="unitRight size1of2 talign-right" />
+            </fieldset>
+            <div class="fs0 bshadow0 clearfix hidden-true">
+                <span class="unit pvs fgc1">liga: </span>
+                <input type="text" readonly value="" class="liga unitRight" />
+            </div>
+        </div>
+        <div class="glyph fs2">
+            <div class="clearfix bshadow0 pbs">
+                <span class="icon-phone2"></span>
+                <span class="mls"> icon-phone2</span>
+            </div>
+            <fieldset class="fs0 size1of1 clearfix hidden-false">
+                <input type="text" readonly value="e916" class="unit size1of2" />
+                <input type="text" maxlength="1" readonly value="&#xe916;" class="unitRight size1of2 talign-right" />
             </fieldset>
             <div class="fs0 bshadow0 clearfix hidden-true">
                 <span class="unit pvs fgc1">liga: </span>
@@ -172,6 +214,20 @@
         </div>
         <div class="glyph fs2">
             <div class="clearfix bshadow0 pbs">
+                <span class="icon-user"></span>
+                <span class="mls"> icon-user</span>
+            </div>
+            <fieldset class="fs0 size1of1 clearfix hidden-false">
+                <input type="text" readonly value="e914" class="unit size1of2" />
+                <input type="text" maxlength="1" readonly value="&#xe914;" class="unitRight size1of2 talign-right" />
+            </fieldset>
+            <div class="fs0 bshadow0 clearfix hidden-true">
+                <span class="unit pvs fgc1">liga: </span>
+                <input type="text" readonly value="" class="liga unitRight" />
+            </div>
+        </div>
+        <div class="glyph fs2">
+            <div class="clearfix bshadow0 pbs">
                 <span class="icon-suitcase1"></span>
                 <span class="mls"> icon-suitcase1</span>
             </div>
@@ -231,30 +287,16 @@
         </div>
         <div class="glyph fs3">
             <div class="clearfix bshadow0 pbs">
-                <span class="icon-images"></span>
-                <span class="mls"> icon-images</span>
+                <span class="icon-bullhorn"></span>
+                <span class="mls"> icon-bullhorn</span>
             </div>
             <fieldset class="fs0 size1of1 clearfix hidden-false">
-                <input type="text" readonly value="e910" class="unit size1of2" />
-                <input type="text" maxlength="1" readonly value="&#xe910;" class="unitRight size1of2 talign-right" />
+                <input type="text" readonly value="e91a" class="unit size1of2" />
+                <input type="text" maxlength="1" readonly value="&#xe91a;" class="unitRight size1of2 talign-right" />
             </fieldset>
             <div class="fs0 bshadow0 clearfix hidden-true">
                 <span class="unit pvs fgc1">liga: </span>
-                <input type="text" readonly value="images, pictures" class="liga unitRight" />
-            </div>
-        </div>
-        <div class="glyph fs3">
-            <div class="clearfix bshadow0 pbs">
-                <span class="icon-airplane"></span>
-                <span class="mls"> icon-airplane</span>
-            </div>
-            <fieldset class="fs0 size1of1 clearfix hidden-false">
-                <input type="text" readonly value="e9af" class="unit size1of2" />
-                <input type="text" maxlength="1" readonly value="&#xe9af;" class="unitRight size1of2 talign-right" />
-            </fieldset>
-            <div class="fs0 bshadow0 clearfix hidden-true">
-                <span class="unit pvs fgc1">liga: </span>
-                <input type="text" readonly value="airplane, travel" class="liga unitRight" />
+                <input type="text" readonly value="bullhorn, megaphone" class="liga unitRight" />
             </div>
         </div>
         <div class="glyph fs3">
@@ -299,23 +341,23 @@
                 <input type="text" readonly value="whatsapp, brand13" class="liga unitRight" />
             </div>
         </div>
-    </div>
-    <div class="clearfix mhl ptl">
-        <h1 class="mvm mtn fgc1">Grid Size: 32</h1>
-        <div class="glyph fs4">
+        <div class="glyph fs3">
             <div class="clearfix bshadow0 pbs">
-                <span class="icon-cassette"></span>
-                <span class="mls"> icon-cassette</span>
+                <span class="icon-github"></span>
+                <span class="mls"> icon-github</span>
             </div>
             <fieldset class="fs0 size1of1 clearfix hidden-false">
-                <input type="text" readonly value="e90b" class="unit size1of2" />
-                <input type="text" maxlength="1" readonly value="&#xe90b;" class="unitRight size1of2 talign-right" />
+                <input type="text" readonly value="eab0" class="unit size1of2" />
+                <input type="text" maxlength="1" readonly value="&#xeab0;" class="unitRight size1of2 talign-right" />
             </fieldset>
             <div class="fs0 bshadow0 clearfix hidden-true">
                 <span class="unit pvs fgc1">liga: </span>
-                <input type="text" readonly value="" class="liga unitRight" />
+                <input type="text" readonly value="github, brand40" class="liga unitRight" />
             </div>
         </div>
+    </div>
+    <div class="clearfix mhl ptl">
+        <h1 class="mvm mtn fgc1">Grid Size: 32</h1>
         <div class="glyph fs4">
             <div class="clearfix bshadow0 pbs">
                 <span class="icon-graduado"></span>
@@ -352,20 +394,6 @@
             <fieldset class="fs0 size1of1 clearfix hidden-false">
                 <input type="text" readonly value="e911" class="unit size1of2" />
                 <input type="text" maxlength="1" readonly value="&#xe911;" class="unitRight size1of2 talign-right" />
-            </fieldset>
-            <div class="fs0 bshadow0 clearfix hidden-true">
-                <span class="unit pvs fgc1">liga: </span>
-                <input type="text" readonly value="" class="liga unitRight" />
-            </div>
-        </div>
-        <div class="glyph fs4">
-            <div class="clearfix bshadow0 pbs">
-                <span class="icon-paperplane"></span>
-                <span class="mls"> icon-paperplane</span>
-            </div>
-            <fieldset class="fs0 size1of1 clearfix hidden-false">
-                <input type="text" readonly value="e914" class="unit size1of2" />
-                <input type="text" maxlength="1" readonly value="&#xe914;" class="unitRight size1of2 talign-right" />
             </fieldset>
             <div class="fs0 bshadow0 clearfix hidden-true">
                 <span class="unit pvs fgc1">liga: </span>
